@@ -1,3 +1,13 @@
+2019-02-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	PR3341: jstack.stp should support ppc64[le,be]
+	* NEWS: Updated.
+
+2019-01-28  Mark Wielaard  <mjw@redhat.com>
+
+	PR3341: jstack.stp should support ppc64[le,be]
+	* tapset/jstack.stp.in: Add ppc64 support.
+
 2019-02-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	Bump aarch32 to jdk8u192-b12-aarch32-181022.
